# bb_wdd

./: CLEyeCameraCapture.cpp  CLEyeCameraCapture.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.h  DotDetector.cpp  DotDetector.h  DotDetectorLayer.cpp  DotDetectorLayer.h  DotDetectorMatrix.cpp  DotDetectorMatrix.h  InputVideoParameters.cpp  InputVideoParameters.h  Main.cpp  ProcessingThread.cpp  ProcessingThread.h  SWP-Waggledance-2015-docs.tex  TypeToString.cpp  TypeToString.h  Util.cpp  Util.h  VideoFrameBuffer.cpp  VideoFrameBuffer.h  WaggleDanceDetector.cpp  WaggleDanceDetector.h  WaggleDanceDetector.sln  WaggleDanceDetector.vcxproj  WaggleDanceDetector.vcxproj.filters  WaggleDanceExport.cpp  WaggleDanceExport.h  WaggleDanceOrientator.cpp  WaggleDanceOrientator.h  cvblob.cpp  cvblob.h  cvlabel.cpp  stdafx.h
output_visualizer/: getAllClusters.py  getAllWaggles.py  getFilesFromFolder.py  main.py  output_clusters.csv  output_xyz.csv  visualize.gp  waggle.py
